--- a/surtidon-war/web/index.xhtml
+++ b/surtidon-war/web/index.xhtml
@@ -10,7 +10,12 @@
         <h1>Paginas del Index</h1>
         <a href="faces/menu.xhtml">Menu</a>
         <br />
-        <a href="faces/listainventario.xhtml">Lista Inventario</a>
+        <a href="faces/Consultar.xhtml">Lista Inventario</a>
+         <br />
+        <a href="faces/Crear.xhtml">Crear</a>
+        <br />
+        <a href="faces/Modificar.xhtml">Modificar</a>
+        
     </h:body>
 </html>
 
