--- a/surtidon-war/web/menu.xhtml
+++ b/surtidon-war/web/menu.xhtml
@@ -28,9 +28,9 @@
                 <p:layoutUnit position="west" size="175" header="Left" collapsible="true">
                     <p:menu>
                         <p:submenu label="Resources">
-                            <p:menuitem value="Lista" url="faces/listainventario.xhtml" />
-                            <p:menuitem value="Documentation" url="http://www.primefaces.org/documentation.html" />
-                            <p:menuitem value="Forum" url="http://forum.primefaces.org/" />
+                            <p:menuitem value="Consultar" url="faces/Consultar.xhtml" />
+                            <p:menuitem value="Crear" url="faces/Crear.xhtml" />
+                            <p:menuitem value="Modificar" url="faces/Modificar.xhtml" />
                             <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
 
                         </p:submenu>
