--- a/surtidon-war/web/Crear.xhtml
+++ b/surtidon-war/web/Crear.xhtml
@@ -13,20 +13,21 @@
                 <h1><h:outputText value="Create/Edit"/></h1>
                 <h:panelGrid columns="2">
                     <h:outputLabel value="Idproducto:" for="idproducto" />
-                    <h:inputText id="idproducto" value="#{inventario.irPorDetalles().idproducto}" title="Idproducto" required="true" requiredMessage="The Idproducto field is required."/>
+                    <h:inputText id="idproducto" value="#{crearRegistroManagedBean.inventarioelsurtidon.idproducto}"/>
                     <h:outputLabel value="Nombredelproducto:" for="nombredelproducto" />
-                    <h:inputText id="nombredelproducto" value="#{inventario.irPorDetalles().nombredelproducto}" title="Nombredelproducto" />
+                    <h:inputText id="nombredelproducto" value="#{crearRegistroManagedBean.inventarioelsurtidon.nombredelproducto}" />
                     <h:outputLabel value="Precio:" for="precio" />
-                    <h:inputText id="precio" value="#{inventario.irPorDetalles().precio}" title="Precio" />
+                    <h:inputText id="precio" value="#{crearRegistroManagedBean.inventarioelsurtidon.precio}"  />
                     <h:outputLabel value="Marca:" for="marca" />
-                    <h:inputText id="marca" value="#{inventario.irPorDetalles().marca}" title="Marca" />
+                    <h:inputText id="marca" value="#{crearRegistroManagedBean.inventarioelsurtidon.marca}" />
                     <h:outputLabel value="Cantidad:" for="cantidad" />
-                    <h:inputText id="cantidad" value="#{inventario.irPorDetalles().cantidad}" title="Cantidad" />
+                    <h:inputText id="cantidad" value="#{crearRegistroManagedBean.inventarioelsurtidon.cantidad}" />
                     <h:outputLabel value="Unidad:" for="unidad" />
-                    <h:inputText id="unidad" value="#{inventario.irPorDetalles().unidad}" title="Unidad" />
+                    <h:inputText id="unidad" value="#{crearRegistroManagedBean.inventarioelsurtidon.unidad}"  />
                     <h:outputLabel value="Descripcion:" for="descripcion" />
-                    <h:inputText id="descripcion" value="#{inventario.irPorDetalles().descripcion}" title="Descripcion" />
+                    <h:inputText id="descripcion" value="#{crearRegistroManagedBean.inventarioelsurtidon.descripcion}"/>
                 </h:panelGrid>
+                <h:commandButton action="#{crearRegistroManagedBean.gravar}" value="Guardar"/>
             </h:form>
         </f:view>
 
