--- a/surtidon-war/web/Consultar.xhtml
+++ b/surtidon-war/web/Consultar.xhtml
@@ -13,7 +13,7 @@
             <p:layout fullPage="true">
                 <p:layoutUnit position="north" size="100" resizable="true" closable="true" collapsible="true">
                     <div id="header">
-                    Tienda y Abarrotes El SurtiDon
+                    Tienda y Abarrotes El SurtiDon.
                     </div>
                     <img id="logo" src="resources/imagenes/surtidon.jpg" width="100" height="90" alt="surtidon-logo"/>
                 </p:layoutUnit>
