--- a/surtidon-war/web/Crear.xhtml
+++ b/surtidon-war/web/Crear.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Agregar Producto</title>
+        <title>Agregar Producto.</title>
         <LINK REL="stylesheet" TYPE="text/css" MEDIA="all" HREF="resources/css/default.css"/>
     </h:head>
     <h:body>
