Proyecto el surtidon funcionando con 5 pantallas consultar, modificar, crear ,menu  y eliminar ya funciona, Se hizo el comit por el cambio en la base de datos para generar las llaves primarias automaticamente

--- a/surtidon-war/web/Consultar.xhtml
+++ b/surtidon-war/web/Consultar.xhtml
@@ -19,7 +19,7 @@
                 </p:layoutUnit>
 
                 <p:layoutUnit position="south" size="100" closable="true" collapsible="true">
-                    Footer
+                   blabalbla
                 </p:layoutUnit>
 
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
