--- a/surtidon-war/web/Modificar.xhtml
+++ b/surtidon-war/web/Modificar.xhtml
@@ -22,7 +22,7 @@
                     </p:layoutUnit>
 
                     <p:layoutUnit position="south" size="100" closable="true" collapsible="true">
-                        Footeasdasddasdasdasdasr
+                        Footer
                     </p:layoutUnit>
 
                     <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
