--- a/surtidon-war/web/index.xhtml
+++ b/surtidon-war/web/index.xhtml
@@ -15,7 +15,8 @@
         <a href="faces/Crear.xhtml">Crear</a>
         <br />
         <a href="faces/Modificar.xhtml">Modificar</a>
-        
+        <br />
+        <a href="faces/ConsultarUsuarios.xhtml">ConsultarUsuarios</a>
     </h:body>
 </html>
 
