--- a/surtidon-war/web/ConsultarUsuarios.xhtml
+++ b/surtidon-war/web/ConsultarUsuarios.xhtml
@@ -25,8 +25,8 @@
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
                     <p:menu>
                         <p:submenu label="Recursos">
-                            <p:menuitem value="Menu" url="faces/menu.xhtml" />
-                            <p:menuitem value="Consultar" url="faces/Consultar.xhtml" />
+                            <p:menuitem value="Menu" url="menu.xhtml" />
+                            <p:menuitem value="Consultar" url="Consultar.xhtml" />
                             <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
 
                         </p:submenu>
