--- a/surtidon-war/web/Modificar.xhtml
+++ b/surtidon-war/web/Modificar.xhtml
@@ -29,9 +29,9 @@
                         <p:menu>
                             <p:submenu label="Recursos">
                                 
-                                <p:menuitem value="Menu" url="faces/menu.xhtml" />
-                                <p:menuitem value="Consultar" url="faces/Consultar.xhtml"  />
-                                <p:menuitem value="Crear" url="faces/Crear.xhtml" />
+                                <p:menuitem value="Menu" url="menu.xhtml" />
+                                <p:menuitem value="Consultar" url="Consultar.xhtml"  />
+                                <p:menuitem value="Crear" url="Crear.xhtml" />
                                 
 
                                 <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
