--- a/surtidon-war/web/Crear.xhtml
+++ b/surtidon-war/web/Crear.xhtml
@@ -7,30 +7,16 @@
     <h:head>
         <title>Agregar Producto.</title>
         <LINK REL="stylesheet" TYPE="text/css" MEDIA="all" HREF="resources/css/default.css"/>
+        <script  type="text/javascript" src="resources/javascript/solonumeros.js">         
+        </script>
     </h:head>
     <h:body>
-        <f:view><h:form>
-                            <h1><h:outputText value="Create/Edit"/></h1>
-                            <h:panelGrid columns="2">
-                                <h:outputLabel value="Nombredeusuario:" for="nombredeusuario" />
-                                <h:inputText id="nombredeusuario" value="#{inventario.irPorDetallesDeUsuarios().nombredeusuario}" title="Nombredeusuario" required="true" requiredMessage="The Nombredeusuario field is required."/>
-                                <h:outputLabel value="Contra:" for="contra" />
-                                <h:inputText id="contra" value="#{inventario.irPorDetallesDeUsuarios().contra}" title="Contra" required="true" requiredMessage="The Contra field is required."/>
-                                <h:outputLabel value="Nombre:" for="nombre" />
-                                <h:inputText id="nombre" value="#{inventario.irPorDetallesDeUsuarios().nombre}" title="Nombre" required="true" requiredMessage="The Nombre field is required."/>
-                                <h:outputLabel value="Apellidos:" for="apellidos" />
-                                <h:inputText id="apellidos" value="#{inventario.irPorDetallesDeUsuarios().apellidos}" title="Apellidos" required="true" requiredMessage="The Apellidos field is required."/>
-                                <h:outputLabel value="Email:" for="email" />
-                                <h:inputText id="email" value="#{inventario.irPorDetallesDeUsuarios().email}" title="Email" />
-                            </h:panelGrid>
-                        </h:form>
-
-
+        <f:view>
             <p:layout fullPage="true">
 
                 <p:layoutUnit position="north" size="100" resizable="true" closable="true" collapsible="true">
                     <div id="header">
-                    Tienda y Abarrotes El SurtiDon
+                        Tienda y Abarrotes El SurtiDon
                     </div>
                     <img id="logo" src="resources/imagenes/surtidon.jpg" width="100" height="90" alt="surtidon-logo"/>
                 </p:layoutUnit>
@@ -42,8 +28,8 @@
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
                     <p:menu>
                         <p:submenu label="Recursos">
-                            <p:menuitem value="Menu" url="faces/menu.xhtml" />
-                            <p:menuitem value="Consultar" url="faces/Consultar.xhtml" />
+                            <p:menuitem value="Menu" url="menu.xhtml" />
+                            <p:menuitem value="Consultar" url="Consultar.xhtml" />
                             <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
 
                         </p:submenu>
@@ -58,12 +44,11 @@
                             <h:outputLabel value="Nombre del producto:" for="nombredelproducto" />
                             <h:inputText id="nombredelproducto" value="#{crearRegistroManagedBean.inventarioelsurtidon.nombredelproducto}" />
                             <h:outputLabel value="Precio:" for="precio" />
-                            <h:inputText id="precio" value="#{crearRegistroManagedBean.inventarioelsurtidon.precio}"  />
+                            <h:inputText id="precio" onkeypress="return soloNumeros(event)" onblur="limpiaPrecio()" value="#{crearRegistroManagedBean.inventarioelsurtidon.precio}"  />
                             <h:outputLabel value="Marca:" for="marca" />
                             <h:inputText id="marca" value="#{crearRegistroManagedBean.inventarioelsurtidon.marca}" />
                             <h:outputLabel value="Cantidad:" for="cantidad" />
-                            <h:inputText id="cantidad" value="#{crearRegistroManagedBean.inventarioelsurtidon.cantidad}" />
-                           
+                            <h:inputText id="cantidad" onkeypress="return soloNumeros(event)" onblur="limpiaCantidad()" value="#{crearRegistroManagedBean.inventarioelsurtidon.cantidad}" />
                             <h:outputLabel value="Unidad:" for="unidad" />  
                             <p:selectOneMenu id="unidad" value="#{crearRegistroManagedBean.inventarioelsurtidon.unidad}">  
                                 <f:selectItem itemLabel="Selecciona" itemValue="" />  
