--- a/surtidon-war/web/menu.xhtml
+++ b/surtidon-war/web/menu.xhtml
@@ -33,9 +33,8 @@
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
                     <p:menu>
                         <p:submenu label="Recursos">
-                            <p:menuitem value="Consultar" url="faces/Consultar.xhtml" />
-                            <p:menuitem value="Crear" url="faces/Crear.xhtml" />
-                            
+                            <p:menuitem value="Consultar" url="Consultar.xhtml" />
+                            <p:menuitem value="Crear" url="Crear.xhtml" />
                             <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
 
                         </p:submenu>
