--- a/surtidon-war/web/ConsultarUsuarios.xhtml
+++ b/surtidon-war/web/ConsultarUsuarios.xhtml
@@ -7,6 +7,8 @@
     <h:head>
         <title>Lista De Usuarios</title>
         <LINK REL="stylesheet" TYPE="text/css" MEDIA="all" HREF="resources/css/default.css"/>
+        <script  type="text/javascript" src="resources/javascript/utilidades.js">         
+        </script>
     </h:head>
     <h:body>
          <p:layout fullPage="true">
