--- a/surtidon-war/web/CrearUsuarios.xhtml
+++ b/surtidon-war/web/CrearUsuarios.xhtml
@@ -7,6 +7,8 @@
     <h:head>
         <title>Lista De Usuarios</title>
         <LINK REL="stylesheet" TYPE="text/css" MEDIA="all" HREF="resources/css/default.css"/>
+        <script  type="text/javascript" src="resources/javascript/utilidades.js">         
+        </script>
     </h:head>
     <h:body>
          <p:layout fullPage="true">
@@ -27,8 +29,6 @@
                         <p:submenu label="Recursos">
                             <p:menuitem value="Menu" url="faces/menu.xhtml" />
                             <p:menuitem value="Consultar" url="faces/Consultar.xhtml" />
-                            <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
-
                         </p:submenu>
 
                     </p:menu>
