--- a/surtidon-war/web/Loging.xhtml
+++ b/surtidon-war/web/Loging.xhtml
@@ -4,6 +4,8 @@
       xmlns:h="http://java.sun.com/jsf/html">
     <h:head>
         <title>Loging</title>
+        <script  type="text/javascript" src="resources/javascript/utilidades.js">         
+        </script>
     </h:head>
     <h:body>
         
