--- a/surtidon-war/web/menu.xhtml
+++ b/surtidon-war/web/menu.xhtml
@@ -12,6 +12,8 @@
                 <title>Menu</title>
             </f:facet>
           <LINK REL="stylesheet" TYPE="text/css" MEDIA="all" HREF="resources/css/default.css"/>
+          <script  type="text/javascript" src="resources/javascript/utilidades.js">         
+        </script>
         </h:head>
 
         <h:body>
@@ -35,8 +37,6 @@
                         <p:submenu label="Recursos">
                             <p:menuitem value="Consultar" url="Consultar.xhtml" />
                             <p:menuitem value="Crear" url="Crear.xhtml" />
-                            <p:menuitem value="Themes" url="http://www.primefaces.org/themes.html" />
-
                         </p:submenu>
 
                     </p:menu>
