Preparandose para dar los ultimos detalles a el surtidon, faltara agregar la seguridad

--- a/surtidon-war/web/Crear.xhtml
+++ b/surtidon-war/web/Crear.xhtml
@@ -28,8 +28,8 @@
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
                     <p:menu>
                         <p:submenu label="Recursos">
-                            <p:menuitem value="Menu" url="menu.xhtml" />
-                            <p:menuitem value="Consultar" url="Consultar.xhtml" />
+                            <p:menuitem value="Menu" url="Menu.jsf" />
+                            <p:menuitem value="Consultar" url="Consultar.jsf" />
                         </p:submenu>
 
                     </p:menu>
