--- a/surtidon-war/web/Modificar.xhtml
+++ b/surtidon-war/web/Modificar.xhtml
@@ -31,9 +31,9 @@
                         <p:menu>
                             <p:submenu label="Recursos">
                                 
-                                <p:menuitem value="Menu" url="menu.xhtml" />
-                                <p:menuitem value="Consultar" url="Consultar.xhtml"  />
-                                <p:menuitem value="Crear" url="Crear.xhtml" />
+                                <p:menuitem value="Menu" url="Menu.jsf" />
+                                <p:menuitem value="Consultar" url="Consultar.jsf"  />
+                                <p:menuitem value="Crear" url="Crear.jsf" />
                             </p:submenu>
 
                         </p:menu>
