--- a/surtidon-war/web/ModificarUsuarios.xhtml
+++ b/surtidon-war/web/ModificarUsuarios.xhtml
@@ -27,8 +27,8 @@
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
                     <p:menu>
                         <p:submenu label="Recursos">
-                            <p:menuitem value="Menu" url="faces/menu.xhtml" />
-                            <p:menuitem value="Consultar" url="faces/Consultar.xhtml" />
+                            <p:menuitem value="Menu" url="Menu.jsf" />
+                            <p:menuitem value="Consultar" url="Consultar.jsf" />
                         </p:submenu>
 
                     </p:menu>
