Primera entrega surtidon

--- a/surtidon-war/web/Menu.xhtml
+++ b/surtidon-war/web/Menu.xhtml
@@ -32,7 +32,22 @@ and open the template in the editor.
                 </p:layoutUnit>
 
                 <p:layoutUnit position="south" size="100" closable="true" collapsible="true">
-                    Footer
+                    <center><p>Contacto</p>
+<a href="mailto:risa-beat-box@hotmail.com" title ="correo">
+
+<img src="resources/imagenes/correo.jpeg" width ="50" height="50" align="center"/>
+
+</a>
+<a href="https://github.com/ripper2hl/" title ="Github">
+
+<img src="resources/imagenes/github.png" width ="50" height="50" align="center"/>
+
+</a>
+<a href="https://twitter.com/ripper2hl" title ="twitter">
+
+<img src="resources/imagenes/twitter.jpeg" width ="50" height="50" align="center" /><hr/>
+</a>
+                    </center>
                 </p:layoutUnit>
 
                 <p:layoutUnit position="west" size="175" header="Izquierda" collapsible="true">
@@ -46,7 +61,7 @@ and open the template in the editor.
                 </p:layoutUnit>
 
                 <p:layoutUnit position="center">
-                    Tienda El Surtidon
+                    
                 </p:layoutUnit>
 
             </p:layout>
